--- a/index.html
+++ b/index.html
@@ -302,15 +302,7 @@
               </div>
               <div class="frame-102">
                 <div class="class4">수량</div>
-                <svg
-                  class="vector-77"
-                  width="509"
-                  viewBox="0 0 509 0"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path d="M0 0H509" stroke="white" />
-                </svg>
+                <div class="vector-77"></div>
 
                 <div class="frame-101">
                   <div class="input-number">
