--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
     <div class="pc">
       <div class="pc2">
         <div class="rectangle-36"></div>
-        <!-- <div class="group-33"> -->
         <svg
           class="group"
           width="313"
@@ -266,15 +265,7 @@
                 />
               </svg>
             </div>
-            <!-- <svg
-              class="vector-74"
-              width="565"
-              viewBox="0 0 565 0"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path d="M0 0H565" stroke="#FFEFEF" />
-            </svg> -->
+            <div class="vector-74"></div>
 
             <div class="frame-103">
               <div class="frame-98">
@@ -1540,5 +1531,89 @@
         </div>
       </div>
     </div>
+    <div class="scrolling_purchase" id="scrolling_purchase">
+      <div class="container">
+        <div class="frame-102">
+          <div class="class4">수량</div>
+
+          <div class="frame-101">
+            <div class="input-number">
+              <div class="icon-plain-button">
+                <svg
+                  class="icon"
+                  width="14"
+                  height="14"
+                  viewBox="0 0 14 14"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M2.33325 7L11.6666 7"
+                    stroke="#606266"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </div>
+              <div class="number">
+                <div class="value">1</div>
+              </div>
+              <div class="icon-plain-button">
+                <svg
+                  class="icon2"
+                  width="14"
+                  height="14"
+                  viewBox="0 0 14 14"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M7 2.33337V11.6667"
+                    stroke="#606266"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M2.33325 7H11.6666"
+                    stroke="#606266"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </div>
+            </div>
+            <div class="_20-0002">20,000원</div>
+          </div>
+        </div>
+        <div class="frame-108">
+          <div class="frame-107">
+            <div class="frame-106">
+              <div class="class5">찜하기</div>
+            </div>
+            <div class="frame-105">
+              <div class="class5">장바구니</div>
+            </div>
+          </div>
+          <div class="frame-104">
+            <div class="class6">구매하기</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script>
+      let mybutton = document.getElementById("scrolling_purchase");
+
+      window.onscroll = function () {
+        scrollFunction();
+      };
+
+      function scrollFunction() {
+        if (
+          document.body.scrollTop > 780 ||
+          document.documentElement.scrollTop > 780
+        ) {
+          mybutton.style.display = "block";
+        } else {
+          mybutton.style.display = "none";
+        }
+      }
+    </script>
   </body>
 </html>
